adds different click event logic

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,2 +1,10 @@
 <!-- Inserts board component -->
-<app-board></app-board>
+<!-- Pass the player id that ISN'T the userId and isUser = false-->
+<app-board [isUserBoard]="false"></app-board>
+<!-- Pass the player id that IS the userId and isUser = true-->
+<app-board [isUserBoard]="true"></app-board>
+
+<mat-radio-group aria-label="User Ship Placement:">
+    <mat-radio-button value="horizontal">Horizontal</mat-radio-button>
+    <mat-radio-button value="vertical">Vertical</mat-radio-button>
+  </mat-radio-group>
