--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,1 @@
-<div class="login">
-    <h2 class= "test-center">Welcome to Battleship!</h2>
-    <P></P>
-    <p class="text-center">Login with Google to get started</p>
-    <div class="test-center">
-        <button mat-raised-button color="accent" (click)="login()">Login with Google</button>
-    </div>
-</div>
-
+<p>hello home</p>
