--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -14,7 +14,7 @@
     </tr>
     <tr *ngFor="let row of objectKeys(boardStatus)">
         <th>{{row | uppercase}}</th>
-        <td *ngFor="let col of boardStatus[row]; let i = index" (click)="checkBoard(row, i)"> 
+        <td *ngFor="let col of boardStatus[row]; let i = index" (click)="checkBoard(row, i)"[style.backgroundColor]="getBGColor(row,i)"> 
     </tr>
 </table>
 
