--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
         </ul>
     <p class="text-center">Login with Google to get started</p>
     <div class="test-center">
-        <button mat-raised-button color="accent" (click)="login()">Login with Google</button>
+        <button mat-raised-button color="primary" (click)="login()">Login</button>
     </div>
 </div>
 
