--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -14,27 +14,42 @@
     </tr>
     <tr *ngFor="let row of objectKeys(boardStatus)">
         <th>{{rows[row] | uppercase}}</th>
-        <td *ngFor="let col of boardStatus[row]; let i = index" (mouseenter)="shipPreview(row, i)" (click)="checkBoard(row, i)"[style.backgroundColor]="getBGColor(row,i)"> 
+        <!-- OPPONENT'S BOARD -->
+        <ng-container *ngIf="!isUserBoard">
+            <td *ngFor="let col of boardStatus[row]; let i = index" (click)="guessShot(row, i)"
+                [ngClass]="'cell-'+ col"> </td>
+        </ng-container>
+        <!-- USER'S BOARD -->
+        <ng-container *ngIf="isUserBoard">
+            <td *ngFor="let col of boardStatus[row]; let i = index"
+                (mouseenter)="shipsRemaining.length > 0 && shipPlacement(row, i, false)"
+                (click)="shipsRemaining.length > 0 && shipPlacement(row, i, true)" [ngClass]="'cell-'+ col"> </td>
+        </ng-container>
     </tr>
 </table>
 
-<h3>Ships Remaining:</h3>
-<div *ngFor="let ship of shipsRemaining">
-    <div *ngIf="isUserBoard">
-        <!-- need to make is so that when you hover, the ship text changes colors and when you click, it turns bold or something -->
-        <!--  (click)="shipPreview(ship.length)" [style.fontWeight]="fontStyle" -->
-        <div> {{ ship.name | titlecase}} ({{ship.length}})</div>
-    </div>  
-    
-    <div *ngIf="!isUserBoard">
+<!-- OPPONENT'S BOARD -->
+<div class="ship-info-container" *ngIf="!isUserBoard">
+    <h3>Opponent's Ships Remaining:</h3>
+    <div *ngFor="let ship of shipsRemaining">
         <div>{{ ship.name | titlecase}}</div>
     </div>
 </div>
 
-<div *ngIf="isUserBoard">
-    <mat-radio-group [(ngModel)]="isVertical" aria-label="User Ship Placement:">
-        <mat-radio-button value="false">Horizontal</mat-radio-button>
-        <mat-radio-button value="true">Vertical</mat-radio-button>
-    </mat-radio-group>
-    {{isVertical}}
+
+<!-- USER'S BOARD -->
+<div class="ship-info-container" *ngIf="isUserBoard && shipsRemaining.length !== 0">
+    <h3 >Your Ships Remaining:</h3>
+    <div *ngFor="let ship of shipsRemaining">
+        <!--   [style.fontWeight]="fontStyle" IF WE ADD BOLD TO THE CURRENT SHIP-->
+        <!--  #fontStyle [style.fontWeight]="makeBold(fontStyle)" -->
+        <div> {{ ship.name | titlecase}} ({{ship.length}})</div>
+    </div>
+    <!-- Horiz/Vert Ship Placement Options -->
+    <div>
+        <mat-radio-group [(ngModel)]="isVertical" aria-label="User Ship Placement:">
+            <mat-radio-button value="false">Horizontal</mat-radio-button>
+            <mat-radio-button value="true">Vertical</mat-radio-button>
+        </mat-radio-group>
+    </div>
 </div>
