--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -40,10 +40,11 @@
 <!-- USER'S BOARD -->
 <div class="ship-info-container" *ngIf="isUserBoard && shipsRemaining.length !== 0">
     <h3 >Your Ships Remaining:</h3>
-    <div *ngFor="let ship of shipsRemaining">
+    <div *ngFor="let ship of shipsRemaining; let i = index">
         <!--   [style.fontWeight]="fontStyle" IF WE ADD BOLD TO THE CURRENT SHIP-->
         <!--  #fontStyle [style.fontWeight]="makeBold(fontStyle)" -->
-        <div> {{ ship.name | titlecase}} ({{ship.length}})</div>
+        <!-- [ngStyle]="{ 'fontWeight: bold' }" -->
+        <div [style.fontWeight]="checkIfFirst(i)"> {{ ship.name | titlecase}} ({{ship.length}})</div>
     </div>
     <!-- Horiz/Vert Ship Placement Options -->
     <div>
