Firebase init and home component functionality.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,7 @@
 <!-- Inserts board component -->
 
 <!-- Pass the player id that ISN'T the userId and isUser = false-->
-<app-board [isUserBoard]="false"></app-board>
+<app-board [isUserBoard]="false" user=[userId]></app-board>
 <!-- Pass the player id that IS the userId and isUser = true-->
 <app-board [isUserBoard]="true"></app-board>
 
