--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login">
-    <h2 class= "test-center">Welcome to Battleship!</h2>
+    <h2 class= "text-center">Welcome to Battleship!</h2>
     <p> 
         Place 4 ships of different sizes vertically or horizontally on your board. You will then take turns
         trying to guess where your opponents enemy ships are located. When all of a player's ships have been sunk,
@@ -12,7 +12,7 @@
             <li>Carrier - 5x1 ship</li>
         </ul>
     <p class="text-center">Login with Google to get started</p>
-    <div class="test-center">
+    <div class="text-center">
         <button mat-raised-button color="primary" (click)="login()">Login</button>
     </div>
 </div>
