--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <mat-label>Enter Game Code</mat-label>
         <input matInput type='text' name="room code" [(ngModel)]='gameId'>
       </mat-form-field>
-      <button mat-raised-button class="w-100" color="primary" (click)='navGame()'>Join Game</button>
+      <button mat-raised-button class="w-100" color="primary" (click)='joinGame()'>Join Game</button>
     </form>
 
     <p class="txt-center">Not joining an existing game?</p>
