instructions and snackBar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h1 class="txt-center container">Home</h1>
+<h1 class="txt-center container">Battleship Home Page</h1>
 
 <div class="container">
   <div class="content">
@@ -13,5 +13,15 @@
 
     <p class="txt-center">Not joining an existing game?</p>
     <button (click)="loggedIn()" class="largeButton w-100" mat-raised-button color="primary">Create New Game</button>
+    
+    <!--<app-instructions></app-instructions>-->
+    
+    <div id="game-desc">
+      <h2>To join a game</h2>
+      <p>
+        To join a game you must receive a game code from a player who has created a game and paste it into 
+        the join game input field.
+      </p>
+    </div>
 </div>
 </div>
