--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,1 +1,8 @@
 <p>instructions works!</p>
+<div id="game-desc">
+    <h2>To join a game</h2>
+    <p>
+        To join a game you must receive a game code from a player who has created a game and paste it into 
+        the join game input field.
+    </p>
+</div>
