--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="login">
     <h2 class= "text-center">Welcome to Battleship!</h2>
     <p> 
-        Place 4 ships of different sizes vertically or horizontally on your board. You will then take turns
-        trying to guess where your opponents enemy ships are located. When all of a player's ships have been sunk,
-        the opposing player wins.
+       This is a multiplayer game. Each player will place 4 ships of different sizes vertically or horizontally on your board. 
+       You will then take turns trying to guess where your opponents enemy ships are located. When all of a player's ships 
+       have been sunk,the opposing player wins.
     </p>
         <ul>
             <li>Destroyer - 2x1 ship</li>
@@ -11,7 +11,7 @@
             <li>Battleship - 4x1</li>
             <li>Carrier - 5x1 ship</li>
         </ul>
-    <p class="text-center">Login with Google to get started</p>
+    <p class="text-center">Login with Google to create or join a game.</p>
     <div class="text-center">
         <button mat-raised-button color="primary" (click)="login()">Login</button>
     </div>
