--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,8 +17,8 @@
   }
   
   .content {
-    width: calc(20% - 10px);
-    height: 245px;
+    width: calc(50% - 10px);
+    /*height: 245px;*/
     margin-top: 10px;
     border: 3px solid #353535;
     background-color: #c7c0c0;
@@ -33,5 +33,13 @@
   
   p {
     margin-top: 50px;
+  }
+
+  #game-desc {
+    padding-top: 50px;
+  }
+
+  #game-desc p {
+    margin-top: 20px
   }
   
