--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
     <form class="example-form">
       <mat-form-field class="w-100">
         <mat-label>Enter Game Code</mat-label>
-        <input matInput type='text' name="room code" [(ngModel)]='gameCode'>
+        <input matInput type='text' name="room code" [(ngModel)]='gameId'>
       </mat-form-field>
-      <button mat-raised-button class="w-100" color="primary" (click)='navGame()'>Join Game</button>
+      <button mat-raised-button class="w-100" color="primary" (click)='joinGame()'>Join Game</button>
     </form>
 
     <p class="txt-center">Not joining an existing game?</p>
