Change to the title.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar color="primary">
   
     <button mat-button routerLink="home">
-      <h1 class="txt-center container">Battleship Home Page</h1>
+      <h1 class="txt-center container">Battleship</h1>
       
     </button>
     <span style="flex: 1 1 auto;"></span>
