--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,19 +6,24 @@
         <mat-label>Enter Game Code</mat-label>
         <input matInput type='text' name="room code" [(ngModel)]='gameId'>
       </mat-form-field>
-      <button mat-raised-button class="w-100" color="primary" (click)='joinGame()'>Join Game</button>
+      <button mat-raised-button class="w-100" class ="buttonStyle" color="primary" (click)='joinGame()'>Join Game</button>
     </form>
 
-    <p class="txt-center">Not joining an existing game?</p>
-    <button (click)="loggedIn()" class="largeButton w-100" mat-raised-button color="primary">Create New Game</button>
+    <button (click)="loggedIn()" class="largeButton w-100" mat-raised-button class ="buttonStyle" color="primary">Create New Game</button>
     
     <!--<app-instructions></app-instructions>-->
     
     <div id="game-desc">
-      <h2>To join a game</h2>
+      <h2 class="txt-center">To Join A Game</h2>
       <p>
         To join a game you must receive a game code from a player who has created a game and paste it into 
-        the join game input field.
+        the game code input field.
+
+
+      </p>
+      <h2 class="txt-center">Create A Game</h2>
+      <p>
+        After clicking on create game you will be given a game code. Share your code with a friend so that they can join! 
       </p>
     </div>
 </div>
