--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -1,4 +1,3 @@
-<p>instructions works!</p>
 <div id="game-desc">
     <h2>To join a game</h2>
     <p>
@@ -7,9 +6,9 @@
     </p>
 </div>
 
-<div>
+<div id="game-instr">
   <h2>To play battleship</h2>
-  <p>The goal of battleship is to sink your opponent's fleet of five ships before they sink yours.
+  <p>The goal of battleship is to sink your opponent's fleet of four ships before they sink yours.
     <br>
 
     Rules for placing ships:
