--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,18 @@
-<p>chat works!</p>
+<div #output class='output-box'>
+    <div *ngFor = "let m of messages">
+      <span class="displayName"> {{m.msg.displayName}} </span>- {{m.msg.body}}
+    </div>
+  </div>
+  
+  <div class="chat-input">
+    <mat-form-field class="input-box">
+      <mat-label>Message</mat-label>
+      <textarea matInput
+                [(ngModel)]="messageText"
+                placeholder="Enter a new message..." maxlength="280"></textarea>
+    </mat-form-field>
+  
+    <button mat-icon-button color="primary" aria-label="Send Message" (click)="sendMessage()">
+      <mat-icon>send</mat-icon>
+    </button>
+  </div>
