--- a/src/app/instructions/instructions.component.html
+++ b/src/app/instructions/instructions.component.html
@@ -12,12 +12,16 @@
     <br>
 
     Rules for placing ships:
+    <br>
       Start by placing each ship in any horizontal or vertical position, using the horizontal or vertical buttons.
       You cannot place your ships diagonally.
       You will not be able to change the position and/or location of the ship once it's placed.
     <br>
 
-    To begin
+    To begin:
+    <br>
+    Player one will get to shoot first and they'll see a response if the shot was a hit or a miss. Player one and player two
+    will rotate turns until a player has successfully sunk all of their opponent's ships.
 
 
   </p>
