replaces socket.io packages with older ones

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -13,3 +13,7 @@
         <app-board [isUserBoard]="true" class="margin-auto relative"></app-board>
     </div>
 </div>
+<div class="chat-board">
+    <h2>Chat</h2>
+    <app-chat></app-chat>
+</div>
