Added google button.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,14 @@
         </ul>
     <p class="text-center">Login with Google to create or join a game.</p>
     <div class="text-center">
-        <button mat-raised-button color="primary" (click)="login()">Login</button>
+        <!--<div id="google-button" (click)="login()">
+            <img src="../../assets/btn_google_signin_dark_pressed_web.png" alt="Google login button">
+        </div>-->
+        <button id="google-button" (click)="login()">
+            <img src="../../assets/btn_google_signin_dark_pressed_web.png" alt="Google login button">
+        </button>
+
+        <!--<button mat-raised-button color="primary" (click)="login()">Login</button>-->
     </div>
 </div>
 
