--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -43,3 +43,15 @@
     border-radius: 15px;
     padding: 5%;
 }
+
+#google-button:hover {
+  /*width: 191px;*/
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+}
+
+/*button {
+  border: none;
+  background: none;
+}*/
