adds some basic status notes

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -12,4 +12,11 @@
         <h2>Your Board</h2>
         <app-board [isUserBoard]="true" class="margin-auto relative"></app-board>
     </div>
+
+    <div>
+        <h3>Status</h3>
+        <p>Game Ready: {{gameInfo.gameReady}}</p>
+        <p>Player's Turn: {{playersTurn}}</p>
+    </div>
 </div>
+
