--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -15,8 +15,8 @@
 
     <div>
         <h3>Status</h3>
-        <p>Game Ready: {{gameInfo.gameReady}}</p>
-        <p>Player's Turn: {{playersTurn}}</p>
+        <p>Game Ready: {{gameInfo?.gameReady}}</p>
+        <p *ngIf="gameInfo?.gameReady">Player's Turn: {{userId === gameInfo?.activePlayer ? 'Player' : 'Opponent'}}</p>
     </div>
 </div>
 
