--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -12,8 +12,9 @@
         <h2>Your Board</h2>
         <app-board [isUserBoard]="true" class="margin-auto relative"></app-board>
     </div>
+    <div class="chat-board">
+        <h2 class="chat-header">Chat</h2>
+        <app-chat></app-chat>
+    </div>
 </div>
-<div class="chat-board">
-    <h2>Chat</h2>
-    <app-chat></app-chat>
-</div>
+
