--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -51,8 +51,9 @@
     <!-- Horiz/Vert Ship Placement Options -->
     <div>
         <mat-radio-group [(ngModel)]="isVertical" aria-label="User Ship Placement:">
-            <mat-radio-button value="false">Horizontal</mat-radio-button>
-            <mat-radio-button value="true">Vertical</mat-radio-button>
+            <mat-radio-button class="btnStyle btn1" value="false">Horizontal</mat-radio-button>
+            <br>
+            <mat-radio-button class="btnStyle" value="true">Vertical</mat-radio-button>
         </mat-radio-group>
     </div>
 </div>
