--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -4,4 +4,10 @@
     padding: 15px;
     text-align: center;
     margin: 10px;
+    background-color: #495057;
+    color: black;
+}
+
+.boardTitle{
+    color: white; 
 }
