--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,10 +6,10 @@
        have been sunk, the opposing player wins.
     </p>
         <ul>
-            <li>Destroyer - 2x1 ship</li>
-            <li>Submarine - 3x1 ship</li>
-            <li>Battleship - 4x1</li>
-            <li>Carrier - 5x1 ship</li>
+            <li><b>Destroyer - 2x1 ship</b></li>
+            <li><b>Submarine - 3x1 ship</b></li>
+            <li><b>Battleship - 4x1</b></li>
+            <li><b>Carrier - 5x1 ship</b></li>
         </ul>
     <p class="text-center">Login with Google to create or join a game.</p>
     <div class="text-center">
