--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -38,10 +38,10 @@
   
 .login{
     max-width: 600px;
-    margin: auto;
+    margin: 50px auto;
     border: solid black 5px;
     border-radius: 15px;
-    padding: 5%;
+    padding: 1%;
 }
 
 #google-button:hover {
