--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,26 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .row {
     flex-direction: row;
 }
+
+// CSS style app
+.toolBar {
+    background-color: #253C78;
+}
+
+.title{
+    color: white; 
+}// CSS style app
+.toolBar {
+    background-color: #253C78;
+}
+
+.title{
+    color: white; 
+}// CSS style app
+.toolBar {
+    background-color: #253C78;
+}
+
+.title{
+    color: white; 
+}
