--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,11 +1,15 @@
 td {
-    background-color: blue;
+    background-color: #6D98BA;
     height: 40px;
     width: 40px;
 }
 
 table {
     border: 3px solid black;
+    background-color: #CED4DA;
+    color: black;
+    color: black;
+    color: black;
 }
 
 td:hover {
@@ -17,10 +21,13 @@ td:hover {
     padding: 15px;
     border: 2px solid black;
     border-radius: 10px;
+    margin-top: 15px;
+    margin-top: 15px;
+    margin-top: 15px;
 }
 
 .cell-0{
-    background-color: blue;
+    background-color: #6D98BA;
 }
 .cell-1, .cell-5{
     background-color: gray;
@@ -33,4 +40,16 @@ td:hover {
 }
 .cell-4{
     background-color: red;
+}
+
+.ng-container{
+    background-color: #495057;
+}
+
+.btn1{
+    margin-top: 10px; ;
+}
+
+.btnStyle{
+    margin: 10px auto;
 }
