--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
     flex-flow: row wrap;
     justify-content: center;
     margin: 10px auto;
-    font-family: impact;
+    background-color: #253C78;
   
 }
 
@@ -12,26 +12,15 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 20px auto;
-  }
-  
-  .largeBtn{
-      width: 300px;
-      height: 250px;
-      font-size: large;
-    
-  }
-  
-  .w-100 {
-    width: 100%;
+    margin: 75px auto;
   }
   
   .content {
     width: calc(50% - 10px);
-    /*height: 245px;*/
+    /* height: 245px; */
     margin-top: 10px;
     border: 3px solid #353535;
-    background-color: #C0C0C4;
+    background-color: #f7f7f8;
     padding: 0px 5px;
     border-radius: 10px;
     justify-content: center !important;
@@ -39,21 +28,29 @@
   
   .txt-center {
     text-align: center;
-    font-family: impact;
   }
   
   p {
     margin-top: 50px;
     padding: 5px;
- 
-     
   }
 
+  form {
+    width: 208px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 15px;
+  }
+  
   #game-desc {
-    padding-top: 50px;
+    padding-top: 25px;
+    padding-bottom: 10px;
   }
 
   #game-desc p {
-    margin-top: 1px
+    margin-top: 1px;
+
   }
-  
+
+
+
