--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
             <img src="../../assets/btn_google_signin_dark_pressed_web.png" alt="Google login button">
         </div>-->
         <button id="google-button" (click)="login()">
-            <img src="../../assets/btn_google_signin_dark_pressed_web.png" alt="Google login button">
+            <img src="../../assets/btn_google_signin_dark_pressed_web@2x.png" alt="Google login button">
         </button>
 
         <!--<button mat-raised-button color="primary" (click)="login()">Login</button>-->
