--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div #output class='output-box'>
     <div *ngFor = "let m of messages">
       <span class="displayName"> {{m.displayName}} </span>
-      <span class="body | censor: censorProfanity"> {{m.body}} </span> 
+      <span class="body"> {{m.body | censor:censorProfanity}} </span> 
     </div>
   </div>
   <div class="censor">
