--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -24,6 +24,7 @@ td:hover {
     margin-top: 15px;
     margin-top: 15px;
     margin-top: 15px;
+    background-color: #CED4DA; 
 }
 
 .cell-0{
@@ -52,4 +53,8 @@ td:hover {
 
 .btnStyle{
     margin: 10px auto;
+}
+
+.shipsFont {
+    color: black; 
 }
