--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -9,6 +9,7 @@
     padding: 0px 5px;
     border-radius: 10px;
     float: right;
+    
 }
 
 .input-box{
@@ -25,6 +26,7 @@
 .displayName{
     font-weight: bold;
     color: lightskyblue;
+    margin-top: 100px;
 }
 
 span {
