--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,29 @@
 <div class="container">
   <div class="content">
-   
     
     <!--<app-instructions></app-instructions>-->
-    
+
     <div id="game-desc">
       <h2 class="txt-center"><b>Create A Game</b></h2>
       <p>
-        After clicking on create game you will be given a game code. Share your code with a friend so that they can join! 
+        After clicking on create game you will be given a game code. Share your code with a friend so that they can
+        join!
       </p>
-      
+
       <h2 class="txt-center"><b>To Join A Game</b></h2>
       <p>
-        To join a game you must receive a game code from a player who has created a game and paste it into the input field to join game.
-
+        To join a game you must receive a game code from a player who has created a game, the game code is located in
+        the URL. Example /game/12345678 with 12345678 being your game code. Copy the game code and paste it into the
+        input field to join game.
       </p>
-      
+
     </div>
-    <button (click)="loggedIn()" class="largeButton w-100" mat-raised-button class ="buttonStyle" color="primary">Create New Game</button>
-    <button mat-raised-button class ="buttonStyle"  (click)='joinGame()'>Join Game</button>
+
+    <!-- CREATE GAME & JOIN GAME BUTTONS -->
+    <button (click)="loggedIn()" mat-raised-button class="buttonStyle">Create New Game</button>
+    <button mat-raised-button class="buttonStyle" (click)='joinGame()'>Join Game</button>
+    
+    <!-- GAME CODE INPUT FIELD-->
     <form>
       <mat-form-field>
         <mat-label>Enter Game Code</mat-label>
