Get booble button to show up.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,9 +16,9 @@
         <!--<div id="google-button" (click)="login()">
             <img src="../../assets/btn_google_signin_dark_pressed_web.png" alt="Google login button">
         </div>-->
-        <button id="google-button" (click)="login()">
-            <img src="/assets/googleSignInButton.png" alt="Google login button">
-        </button>
+        <div id="google-button" (click)="login()">
+            <img src="../../assets/btn_google_signin_dark_pressed_web@2x.png" alt="Google login button">
+        </div>
 
         <!--<button mat-raised-button color="primary" (click)="login()">Login</button>-->
     </div>
