Adds Instructions and updates some styling

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,7 +1,7 @@
 .output-box{
-    width: 300px;
+    width: 250px;
     height: 425px;
-    margin: 10px auto;
+    margin-right: 25px;
     border: 2px solid #353535;
     background-color: white;
     overflow-y: scroll;
