--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,3 +1,9 @@
+.statusTitle{
+    text-align: center;
+    margin-top: 15px; 
+}
+
+
 .board-container {
     border: 3px solid black;
     border-radius: 15px;
