updates the home and login container styling

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,9 +5,10 @@
   .login{
     max-width: 600px;
     margin: 50px auto;
-    border: solid black 5px;
+    border: solid black 3px;
     border-radius: 15px;
     padding: 1%;
+    background-color: #f7f7f8;
 }
   
   #google-button:hover {
