--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,7 @@
     width: calc(50% - 10px);
     /* height: 245px; */
     margin-top: 10px;
-    border: 3px solid #353535;
+    border: 3px solid black;
     background-color: #f7f7f8;
     padding: 0px 5px;
     border-radius: 10px;
