small shnges to login and game service error message.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,12 +5,14 @@
        You will then take turns trying to guess where your opponents enemy ships are located. When all of a player's ships 
        have been sunk, the opposing player wins.
     </p>
+    <div class="text-center">
         <ul>
             <li><b>Destroyer - 2x1 ship</b></li>
             <li><b>Submarine - 3x1 ship</b></li>
             <li><b>Battleship - 4x1</b></li>
             <li><b>Carrier - 5x1 ship</b></li>
         </ul>
+    </div>
     <p class="text-center">Login with Google to create or join a game.</p>
     <div class="text-center">
         <!--<div id="google-button" (click)="login()">
