--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,10 +4,11 @@
   
   .login{
     max-width: 600px;
-    margin: 50px auto;
-    border: solid black 5px;
+    margin: 30px auto;
+    border: solid black 3px;
     border-radius: 15px;
     padding: 1%;
+    background-color: #f7f7f8
 }
   
   #google-button:hover {
@@ -19,6 +20,12 @@
 
 #google-button img {
   width: 208px;
+}
+ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 30px 0 0;
+   
 }
 
 /*button {
