--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,9 +43,8 @@
   }
 
   form {
-    width: 208px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 250px;
+    margin: auto;
   }
   
   #game-desc {
