--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,7 +3,8 @@
   }
   
   .login{
-    max-width: 600px;
+    width: 600px;
+    height: 375px;
     margin: 50px auto;
     border: solid black 3px;
     border-radius: 15px;
