--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,15 +1,14 @@
 .output-box{
-    width: 250px;
-    height: 425px;
-    margin-right: 25px;
+    width: 200px;
+    height: 400px;
+    // margin-right: 5px;
     border: 2px solid #353535;
     background-color: white;
     overflow-y: scroll;
     word-break: break-word;
     padding: 0px 5px;
     border-radius: 10px;
-    float: right;
-    
+    float: right;    
 }
 
 .input-box{
