--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,8 +19,8 @@
   
   // ALL CONTENT INSIDE INFO CONTAINER 
   .content {
-    width: calc(50% - 10px);
-    /* height: 245px; */
+    width: 600px; 
+    height: 450px; 
     margin-top: 10px;
     border: 3px solid black;
     background-color: #f7f7f8;
