--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,7 +20,7 @@
   // ALL CONTENT INSIDE INFO CONTAINER 
   .content {
     width: 600px; 
-    height: 450px; 
+    min-height: 450px; 
     margin-top: 10px;
     border: 3px solid black;
     background-color: #f7f7f8;
