--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,7 +4,7 @@
   
   .login{
     width: 600px;
-    height: 375px;
+    min-height: 375px;
     margin: 50px auto;
     border: solid black 3px;
     border-radius: 15px;
