fixes dialog close button

--- a/src/app/instructions-dialog/instructions-dialog.component.html
+++ b/src/app/instructions-dialog/instructions-dialog.component.html
@@ -11,6 +11,7 @@
     <p> Player one will get to shoot first and they'll see a response if the shot was a hit or a miss. 
         Player one and player two will rotate turns until a player has successfully sunk all of their opponent's ships.</p>
 
-        <div mat-dialog-actions>
-            <button mat-button mat-dialog-close>Close</button>
-          </div>
+        <mat-dialog-actions>
+          <button mat-button mat-dialog-close>Close</button>
+
+        <mat-dialog-actions>
