--- a/src/app/end-game/end-game.component.html
+++ b/src/app/end-game/end-game.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Game Over! {{winner}} Wins!</h1>
-<div mat-dialog-content>You can play again or quit to main menu</div>
+<h1 mat-dialog-title>Game Over! {{winner}} Win!</h1>
+
 <div mat-dialog-actions>
   <button mat-button (click)='quitGame()'>Quit</button>
 </div>
