--- a/src/app/end-game/end-game.component.html
+++ b/src/app/end-game/end-game.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Game Over! {{winner}} Win!</h1>
+<h1 mat-dialog-title class="text-center">Game Over! {{winner}} Won!</h1>
 
-<div mat-dialog-actions>
-  <button mat-button (click)='quitGame()'>Quit</button>
+<div mat-dialog-actions style="float: right;">
+  <button mat-raised-button (click)='quitGame()'>Quit</button>
 </div>
