--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,4 @@
+<button (click)="showWinner()">trigger end game</button>
 <!-- Inserts board component -->
 <div class="statusTitle">
     <h3><b>Status</b></h3>
