--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,3 +35,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: white;
 }
 
+.mat-button-toggle-appearance-standard .mat-button-toggle-label-content{
+    line-height: 30px !important; 
+}
