--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -37,3 +37,10 @@
 .chat-header{
     text-align: center;
 }
+.dot {
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: black;
+}
